# autonomos_AiLab

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  fixed_app.py  memory_store.json  pyproject.toml  requirements.txt  setup.py  slack_bot.service  test_memory_persistence.json  test_slack_tokens.py
memory-bank/: activeContext.md  improvements.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
slack_bot/: .gitignore  README.md  __init__.py  app.py  create_instance.sh  deploy.sh  deploy_manager.py  deploy_to_gce.sh  deployment_config.yaml  requirements.txt  run_bot.sh  test_bot.py
slack_bot/cli/: __init__.py  deploy.py  generate.py
slack_bot/config/: __init__.py  settings.py
slack_bot/config/personalities/: __init__.py  custom.py  default.py  lucius.py
slack_bot/connectors/: __init__.py  base.py  composio_mcp.py  event_handlers.py  slack_bolt.py
slack_bot/context/: __init__.py  history.py  manager.py  memory.py
slack_bot/personality/: __init__.py  formatters.py  manager.py  templates.py
slack_bot/schemas/: __init__.py  messages.py  responses.py
slack_bot/templates/: __init__.py
slack_bot/templates/bot_templates/: __init__.py
slack_bot/templates/bot_templates/default/: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  app.py  requirements.txt  test_bot.py
slack_bot/templates/bot_templates/default/scripts/: create_instance.sh  deploy.sh  pre-commit.sh
slack_bot/templates/bot_templates/default/tests/: __init__.py  test_app.py
slack_bot/templates/config_templates/: __init__.py  ci.yml  logging_config.yaml  project_settings.yaml  pytest.ini
slack_bot/tests/: test_lucius_memory.py
slack_bot/utils/: __init__.py  error_handling.py  logging.py
